@@ -14,6 +14,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
 test {
     useJUnitPlatform()
 }
